# mlops

./: .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml
benchmark/: locustfile.py
docs/: specification.yml
models/: meta.json
models/textcat/: cfg
models/vocab/: strings.json
tests/: test_app.py
